--- a/minilang/public/minilang.css
+++ b/minilang/public/minilang.css
@@ -8,7 +8,7 @@ div#minilang {
 }
 
 div#edit {
-    width: 50%;
+    width: 50vw;
     height: 90vh;
 }
 
@@ -18,7 +18,7 @@ textarea#program {
 }
 
 div#repl {
-    width: 50%;
+    width: 50vw;
 }
 
 div.output {
