--- a/minilang/public/minilang.css
+++ b/minilang/public/minilang.css
@@ -17,6 +17,7 @@ textarea#program {
     width: 100%;
     height: 100%;
     padding: 1em;
+    font-family: Inconsolata, Courier;
     font-size: 12pt;
 }
 
